syntax = "proto3";  // 定義要使用的 protocol buffer 版本

import "google/protobuf/timestamp.proto";
import "device/proto/device.proto";

option go_package = "device/pb";
package device;

message MigrationDeviceRequest {
	string name = 1;
	string mac = 2;
	string gwid = 3;
	int32 timezone = 4;
	google.protobuf.Timestamp createTime = 5;
	bool enableOfflineNotify = 6;
}


service DeviceMigrationService {
	// 搬移使用者資訊
	rpc MigrationDevice(stream MigrationDeviceRequest) returns (stream Response) {};
}